# gbr-source-summary

./: .gitignore  README.md  environment.yml  pyproject.toml
check_outputs/fu_all_regions/: anthropogenic_fu_report_units.csv  base_fu_report_units.csv  change_fu_report_units.csv  fu_report_qa.xlsx  fu_report_report_units.xlsx  percent_reduction_fu_report_units.csv  predev_fu_report_units.csv  (+1 more)
example/: gbr_report_card_summary_notebook.ipynb
scripts/: check_basin_fu_compare.py  check_basin_outputs.py  check_export_compare.py  check_export_excel.py  check_io.py  check_naming.py  check_output_files.py  check_qa_fu.py  check_run_all_gbr_fu_reports.py  check_run_all_gbr_process_reports.py  check_run_fu_report.py  check_run_process_report.py  check_run_report_card_summary.py  check_summary_flow.py  check_summary_fu_io.py  check_workflows_compare.py  check_workflows_flow.py  check_workflows_process.py  run_basin_summary.py  run_cy_fu_report.py  run_fu_load_summary.py  run_herbert_michael_request.py  run_landuse_rainfall_summary.py  run_process_report.py  run_region_summary.py  run_report_card_summary.py  run_sankey_all_basins.py  run_source_sink_sankey_for_basin.py  run_source_sink_summary.py
tests/: test_comparison.py  test_config.py  test_export.py  test_export_excel.py  test_io.py  test_metrics.py  test_qa_checks.py  test_regions.py  test_report_card_summary.py  test_report_fu.py  test_report_process.py  test_summary_flow.py  test_summary_fu.py  test_summary_process.py  test_units.py  test_workflows_compare.py  test_workflows_flow.py  test_workflows_source_sink.py
(+174 files in other folders)
